# vision

./: .gitignore  CMakeLists.txt  README  install_vision.sh  kalman.py  package.xml  rospy
config/: image.yaml  vision.yaml
data/: camera-settings.config  color_calibration.yaml  depth_field.yml  field.yml  match.yml
include/calibration/: capture_points.hpp  color_calibration.hpp  depth_fix.hpp  file_manager.hpp  matching.hpp  select_field.hpp
include/vision/: algorithm.hpp  algorithm_factory.hpp  ball_identification.hpp  ball_in_range_color_segmentation.hpp  config_parser.hpp  dummy_identification_algorithm.hpp  dummy_segmentation_algorithm.hpp  find_robots_by_color.hpp  find_robots_by_depth.hpp  findrobots.hpp  hsv_in_range_color_segmentation.hpp  identification_algorithm.hpp  identification_output.hpp  identifier.hpp  new_robot_identification.hpp  raw_image.hpp  robot_identification.hpp  segmentation_algorithm.hpp  segmenter.hpp  tracked_object.hpp  tracker.hpp  tracking_output.hpp  vision.hpp  vision_gui.hpp
launch/: run_calibration.launch  run_vision.launch  test_calibration_node.launch  test_vision.launch
msg/: VisionMessage.msg
scripts/: load_parameters.sh  save_parameters.sh
src/calibration/: calibration_node.cpp  capture_points.cpp  color_calibration.cpp  depth_fix.cpp  file_manager.cpp  matching.cpp  select_field.cpp
src/camera/: camera.cpp  save_kinect_video.cpp  show_camera.cpp  show_kinect_camera.cpp
src/dummy_camera/: dummy_camera.cpp  dummy_image.cpp
src/pixel_to_metric_conversion/: pixel_to_metric_conversion_node.cpp
src/test_calibration/: test_calibration_node.cpp
src/vision/: algorithm.cpp  algorithm_factory.cpp  ball_identification.cpp  ball_in_range_color_segmentation.cpp  config_parser.cpp  dummy_identification_algorithm.cpp  dummy_segmentation_algorithm.cpp  find_robots_by_color.cpp  find_robots_by_depth.cpp  findrobots.cpp  hsv_in_range_color_segmentation.cpp  identification_algorithm.cpp  identifier.cpp  new_robot_identification.cpp  raw_image.cpp  robot_identification.cpp  segmentation_algorithm.cpp  segmenter.cpp  tracked_object.cpp  tracker.cpp  vision.cpp  vision_gui.cpp  vision_node.cpp
