<?xml version="1.0"?>
<package>
  <name>vision</name>
  <version>0.0.1</version>
  <description>The UnBall Robot Soccer Team vision system package</description>

  <maintainer email="gabri.navess@gmail.com">Gabriel Naves</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/unball/ieee-very-small</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>OpenCV</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>message_runtime</run_depend>

</package>

